--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 8 * * *'  # كل يوم الساعة 8 صباحاً UTC (تقدر تغيّر الوقت)
+    - cron: '0 8 * * *'
 
 jobs:
   generate_video:
@@ -20,7 +20,9 @@ jobs:
         python-version: 3.10
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Generate Video
       run: python main.py
