--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,39 +4,150 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+    inputs:
+      content_topic:
+        description: 'Topic for content generation'
+        required: false
+        default: 'technology'
 
 jobs:
   generate_content:
     runs-on: ubuntu-latest
+    timeout-minutes: 30  # لمنع التوقف اللانهائي
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - name: Checkout repository with submodules
+      uses: actions/checkout@v4  # تحديث للإصدار v4
+      with:
+        submodules: recursive
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10  # << غيرنا من 3.1 إلى 3.10
-        check-latest: false
+        python-version: '3.10'  # إصدار LTS مدعوم
+        cache: 'pip'  # تفعيل التخزين المؤقت
+        cache-dependency-path: |
+          requirements.txt
+          pyproject.toml
+          setup.py
 
-    - name: Install dependencies
+    - name: Install system dependencies (if needed)
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        # إذا ما عندكش requirements.txt:
-        # pip install moviepy gTTS pydub
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg imagemagick ghostscript
+        # للتحقق من صحة ImageMagick إذا كان مطلوبًا
+        sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-6/policy.xml || true
 
-    - name: Generate Voice
-      run: python agents/voice_agent.py
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+        else
+          # الاعتمادات الأساسية المتوقعة
+          pip install moviepy>=1.0.3 gTTS>=2.3.2 pydub>=0.25.1 openai>=1.6.1 pillow>=10.0.0 requests>=2.31.0
+        fi
+        # لتثبيت التبعيات الاختيارية إذا لزم الأمر
+        pip install pyyaml>=6.0 python-dotenv>=1.0.0
 
-    - name: Generate Video
-      run: python agents/video_agent.py
+    - name: Setup environment variables
+      run: |
+        # إنشاء ملف .env إذا لم يكن موجودًا
+        if [ ! -f .env ]; then
+          cp .env.example .env 2>/dev/null || echo "No .env.example found, skipping"
+        fi
+        # تعيين متغيرات افتراضية للاختبار
+        if [ -z "${{ secrets.OPENAI_API_KEY }}" ]; then
+          echo "WARNING: OPENAI_API_KEY not set in secrets"
+        fi
 
-    - name: Generate Script / Text
-      run: python agents/script_agent.py
+    - name: Lint and validate code
+      run: |
+        # التحقق من صحة بناء الكود
+        python -m py_compile agents/*.py 2>/dev/null || true
+        python -m py_compile main.py 2>/dev/null || true
+        # إذا كان لديك flake8 أو black
+        pip install flake8 black --quiet 2>/dev/null || true
+        flake8 agents/ main.py --max-line-length=120 --ignore=E501,W503 2>/dev/null || true
 
-    - name: Compile & Publish
-      run: python main.py
+    - name: Create output directories
+      run: |
+        mkdir -p output/videos output/audio output/text logs
+        echo "Output directories created"
 
-    - name: Complete job
-      run: echo "All steps completed successfully!"
+    - name: Generate content (with error handling)
+      continue-on-error: false
+      env:
+        CONTENT_TOPIC: ${{ github.event.inputs.content_topic || 'technology' }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
+        PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+      run: |
+        set -e  # التوقف عند أول خطأ
+        
+        # تسجيل وقت البدء
+        echo "Job started at: $(date)" > logs/run_$(date +%Y%m%d_%H%M%S).log
+        
+        # توليد المحتوى بتسلسل محدد
+        echo "=== Generating Script ==="
+        python agents/script_agent.py "$CONTENT_TOPIC" 2>&1 | tee -a logs/script.log
+        
+        echo "=== Generating Voice ==="
+        python agents/voice_agent.py 2>&1 | tee -a logs/voice.log
+        
+        echo "=== Generating Video ==="
+        python agents/video_agent.py 2>&1 | tee -a logs/video.log
+        
+        echo "=== Compiling Final Content ==="
+        python main.py 2>&1 | tee -a logs/main.log
+        
+        # التحقق من الملفات المخرجة
+        if [ -f "output/final_video.mp4" ]; then
+          echo "SUCCESS: Final video generated: output/final_video.mp4"
+          ls -lh output/final_video.mp4
+        else
+          echo "WARNING: Final video not found in expected location"
+          find output/ -name "*.mp4" -o -name "*.avi" -o -name "*.mov" | head -5
+        fi
+
+    - name: Upload artifacts
+      if: always()  # رفع المخرجات حتى في حالة الفشل
+      uses: actions/upload-artifact@v3
+      with:
+        name: generated-content-${{ github.run_id }}
+        path: |
+          output/
+          logs/
+        retention-days: 7
+
+    - name: Upload to releases (optional)
+      if: success() && github.event_name == 'workflow_dispatch'
+      uses: softprops/action-gh-release@v1
+      with:
+        files: output/final_video.mp4
+        tag_name: content-${{ github.run_id }}
+        name: Generated Content ${{ github.run_number }}
+        body: |
+          Auto-generated content created on ${{ github.event.head_commit.timestamp }}
+          
+          Topic: ${{ github.event.inputs.content_topic || 'technology' }}
+          
+          Run ID: ${{ github.run_id }}
+        draft: false
+        prerelease: false
+
+    - name: Notify success
+      if: success()
+      run: |
+        echo "🎉 Content generation completed successfully!"
+        echo "Run ID: ${{ github.run_id }}"
+        echo "Artifacts available for download"
+
+    - name: Notify failure
+      if: failure()
+      run: |
+        echo "❌ Content generation failed!"
+        echo "Check the logs for details"
+        echo "Run ID: ${{ github.run_id }}"
+        exit 1
